--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
-                        <p>Escrito el: <span>31/03/2024</span> por: <span>Admin</span> </p>
+                        <p class="informacion-meta">Escrito el: <span>31/03/2024</span> por: <span>Admin</span> </p>
 
                         <p>
                             Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dineros.
@@ -211,7 +211,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Guia para la decoración de tu hogar</h4>
-                        <p>Escrito el: <span>31/03/2024</span> por: <span>Admin</span> </p>
+                        <p class="informacion-meta">Escrito el: <span>31/03/2024</span> por: <span>Admin</span> </p>
 
                         <p>
                             Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
