--- a/anuncio.html
+++ b/anuncio.html
@@ -16,12 +16,21 @@
                     <img class="logo" src="build/img/logo.svg" alt="Logotipo de Elite Dwellings"> <!-- Logo de la página -->
                 </a>
 
-                <nav class="navegacion"> <!-- Enlaces -->
-                    <a href="nosotros.html">Nosotros</a> <!-- Enlace para llevarnos a la página de nostros -->
-                    <a href="anuncios.html">Anuncios</a> <!-- Enlace para llevarnos a la página de anuncios -->
-                    <a href="blog.html">Blog</a> <!-- Enlace para llevarnos a la página de blog -->
-                    <a href="contacto.html">Contacto</a> <!-- Enlace para llevarnos a la página de contacto -->
-                </nav>
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="Menú Responsive">
+                </div>
+
+                <div class="derecha">
+
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="Botón para Dark Mode">
+
+                    <nav class="navegacion"> <!-- Enlaces -->
+                        <a href="nosotros.html">Nosotros</a> <!-- Enlace para llevarnos a la página de nostros -->
+                        <a href="anuncios.html">Anuncios</a> <!-- Enlace para llevarnos a la página de anuncios -->
+                        <a href="blog.html">Blog</a> <!-- Enlace para llevarnos a la página de blog -->
+                        <a href="contacto.html">Contacto</a> <!-- Enlace para llevarnos a la página de contacto -->
+                    </nav>
+                </div>
             </div> <!-- Cierre de la barra de navegación -->
         </div>
 
@@ -41,15 +50,15 @@
 
             <ul class="iconos-caracteristicas">
                 <li>
-                    <img src="build/img/icono_wc.svg" alt="Icono WC" loading="lazy">
+                    <img class="icono" src="build/img/icono_wc.svg" alt="Icono WC" loading="lazy">
                     <p>3</p>
                 </li>
                 <li>
-                    <img src="build/img/icono_estacionamiento.svg" alt="Icono Estacionamiento" loading="lazy">
+                    <img class="icono" src="build/img/icono_estacionamiento.svg" alt="Icono Estacionamiento" loading="lazy">
                     <p>3</p>
                 </li>
                 <li>
-                    <img src="build/img/icono_dormitorio.svg" alt="Icono Habitaciones" loading="lazy">
+                    <img class="icono" src="build/img/icono_dormitorio.svg" alt="Icono Habitaciones" loading="lazy">
                     <p>4</p>
                 </li>
             </ul>
